--- a/build.gradle
+++ b/build.gradle
@@ -193,6 +193,15 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         }
         rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
     }
+    node {
+        name "O=RateOracle,L=New York,C=US"
+        p2pPort 4444
+        rpcSettings {
+            address("localhost:4445")
+            adminAddress("localhost:4446")
+        }
+        rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
+    }
 
 }
 
